<?xml version="1.0" encoding="utf-8"?>
<menu android:layout_height="48dp"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_apps"
        android:title="@string/menu_home"/>

    <item
        android:id="@+id/navigation_market"
        android:icon="@drawable/ic_apps"
        android:title="@string/menu_market"/>

    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/ic_apps"
        android:title="@string/menu_explore"/>

    <item
        android:id="@+id/navigation_experts"
        android:icon="@drawable/ic_apps"
        android:title="@string/menu_experts"/>

    <item
        android:id="@+id/navigation_chats"
        android:icon="@drawable/ic_person"
        android:title="@string/menu_chat"/>

</menu>